--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,7 +3,9 @@ name: CI/CD Pulumi
 run-name: ${{ github.actor }} - GitHub Actions 🚀
 
 on: 
-  push
+  push:
+    branches:
+      - main
   
 
 jobs:
